Successfully can build core-image-minimal.

--- a/meta-cora-z7-base/conf/machine/cora-zynq7.conf
+++ b/meta-cora-z7-base/conf/machine/cora-zynq7.conf
@@ -31,5 +31,5 @@ IMAGE_BOOT_FILES += " \
         boot.bin \
 		uEnv.txt \
         fpga.bin \
-        system_top.dtb \
+        system-top.dtb \
 		"
