--- a/meta-cora-z7-base/recipes-bsp/u-boot/files/zynq-coraz7.dts
+++ b/meta-cora-z7-base/recipes-bsp/u-boot/files/zynq-coraz7.dts
@@ -7,37 +7,26 @@
 /dts-v1/;
 #include "zynq-7000.dtsi"
 
-/delete-node/ &sdhci0;
 / {
 	model = "Zynq Cora Z7 Board";
 	compatible = "xlnx,zynq-7000";
 
 	chosen {
-		bootargs = "console=ttyPS0,115200 root=/dev/mmcblk0p2 rw earlyprintk rootfstype=ext4 rootwait";
-		/*bootargs = "earlycon";*/
+		bootargs = "";
 		stdout-path = "serial0:115200n8";
 	};
+
 	aliases {
 		ethernet0 = &gem0;
 		serial0 = &uart0;
 		mmc0 = &sdhci0;
 	};
+
 	memory {
 		device_type = "memory";
 		reg = <0x0 0x20000000>;
 	};
 
-    amba: amba {
-		sdhci0: mmc@e0100000 {
-			compatible = "arasan,sdhci-8.9a";
-			status = "disabled";
-			clock-names = "clk_xin", "clk_ahb";
-			clocks = <&clkc 21>, <&clkc 32>;
-			interrupt-parent = <&intc>;
-			interrupts = <0 24 4>;
-			reg = <0xe0100000 0x1000>;
-		};
-    };
 };
 
 &gem0 {
@@ -64,9 +53,7 @@
 };
 
 &uart0 {
-	cts-override ;
-	device_type = "serial";
-	port-number = <0>;
+	u-boot,dm-pre-reloc;
 	status = "okay";
 };
 
