Added custom image example.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,14 @@
 [submodule "poky"]
 	path = poky
 	url = git://git.yoctoproject.org/poky
+    ignore = dirty
 [submodule "meta-openembedded"]
 	path = meta-openembedded
 	url = git://github.com/openembedded/meta-openembedded
 	branch = warrior
+    ignore = dirty
 [submodule "meta-xilinx"]
 	path = meta-xilinx
 	url = git://github.com/Xilinx/meta-xilinx/
 	branch = rel-v2018.2
+    ignore = dirty
